--- a/views/products/show.ejs
+++ b/views/products/show.ejs
@@ -10,6 +10,7 @@
 </head>
 <body>
   <section id='show-all-page'>
+    <img src='images/ksBoxes'>
     <div><%= product.name %></div>
     <div><%= product.price %></div>
     <div><%= product.description %></div>
