--- a/views/products/index.ejs
+++ b/views/products/index.ejs
@@ -12,10 +12,10 @@
     <div class='navbar-fixed'>
       <nav>
         <div class='nav-wrapper'>
-          <a id='necklaces' href='/products'> Necklaces </a><br>
-          <a id='bracelets' href='/products'> Bracelets </a><br>
-          <a id='earrings' href='/products'> Earrings </a><br>
-          <a id='rings' href='/products'> Rings </a><br>
+          <a id='necklaces' href='/products/necklaces'> Necklaces </a><br>
+          <a id='bracelets' href='/products/bracelets'> Bracelets </a><br>
+          <a id='earrings' href='/products/earrings'> Earrings </a><br>
+          <a id='rings' href='/products/rings'> Rings </a><br>
           <ul>
               <% if (ksUser) { %>
                 <a id='logout' href='/logout'> Log Out </a>
@@ -30,31 +30,31 @@
       <div id='top-options'>
         <div id='gold'>
           <img id='ders' src='images/dersGold.jpeg'>
-          <h3> Gold Options </h3>
+          <a id='goldOption' href='/products/gold'> Gold Options </a><br>
         </div>
         <div id='silver'>
           <img id='steph' src='images/stephSlv.jpeg'>
-          <h3> Rhodium Options </h3>
+          <a id='silverOption' href='/products/silver'> Silver Options </a><br>
         </div>
         <div id='gunmetal'>
           <img id='model' src='images/gunmetal.jpeg'>
-          <h3> Gunmetal Options </h3>
+          <a id='gunmetalOption' href='/products/gunmetal'> Gunmetal Options </a><br>
         </div>
       </div>
       <div id='bottom-options'>
           <div id='rsg'>
             <img id='meg' src='images/megRsg.jpeg'>
-            <h3> Rose Gold Options </h3>
+            <a id='rsgOption' href='/products/rsg'> Rose Gold Options </a><br>
           </div>
         <div id='colorful'>
           <img id='me' src='images/colorful.jpeg'>
-          <h3> Colorful Options </h3>
+          <a id='colorfulOption' href='/products/colorful'> Colorful Options </a><br>
         </div>
       </div>
     </div>
     <footer>
       <a id='back' href='/'> Back </a>
-      <a id='allprod' href='/show'> All Products </a>
+      <a id='allprod' href='/products/show'> All Products </a>
     </footer>
   </body>
 </html>
