add cart to vav and create cart index

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
     <img id='leftImg' src='images/leftImg.jpeg'>
 
     <div id='middleColumn'>
-      <button id='contactMe' type='submit'> Contact Me </button>
+      <a href='/contact' id='contactMe' type='submit'> Contact Me </a>
       <img id='ksBoxes' src='images/ksBoxes.jpg'>
       <a href='/products' value='viewProducts'> View Products </a>
     </div>
