--- a/views/products/index.ejs
+++ b/views/products/index.ejs
@@ -16,6 +16,7 @@
           <a id='bracelets' href='/products/bracelets'> Bracelets </a><br>
           <a id='earrings' href='/products/earrings'> Earrings </a><br>
           <a id='rings' href='/products/rings'> Rings </a><br>
+          <a id='cart' href='/cart/index'> View Cart </a><br>
           <ul>
               <% if (ksUser) { %>
                 <a id='logout' href='/logout'> Log Out </a>
@@ -26,7 +27,7 @@
         </div> 
       </nav>
     </div>
-    <div id='options'>
+
       <div id='top-options'>
         <div id='gold'>
           <img id='ders' src='images/dersGold.jpeg'>
@@ -41,20 +42,25 @@
           <a id='gunmetalOption' href='/products/gunmetal'> Gunmetal Options </a><br>
         </div>
       </div>
+
       <div id='bottom-options'>
-          <div id='rsg'>
-            <img id='meg' src='images/megRsg.jpeg'>
-            <a id='rsgOption' href='/products/rsg'> Rose Gold Options </a><br>
-          </div>
+        <div id='rsg'>
+          <img id='meg' src='images/megRsg.jpeg'>
+          <a id='rsgOption' href='/products/rsg'> Rose Gold Options </a><br>
+        </div>
         <div id='colorful'>
-          <img id='me' src='images/colorful.jpeg'>
+          <img id='me' src='images/colorful.png'>
           <a id='colorfulOption' href='/products/colorful'> Colorful Options </a><br>
         </div>
+        <div id='allProducts'>
+          <img id='boxes' src='images/ksBoxes.jpg'>
+          <a id='allprod' href='/products/show'> All Products </a>
+        </div>
       </div>
-    </div>
+
     <footer>
       <a id='back' href='/'> Back </a>
-      <a id='allprod' href='/products/show'> All Products </a>
     </footer>
+
   </body>
 </html>
