--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,8 +2,8 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 4fr 1fr;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  margin: 0;
+  font: 80%"Lucida Grande", Helvetica, Arial, sans-serif;
+  margin: 2%;
   height: 100vh;
 }
 
@@ -11,48 +11,59 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 5fr 5fr 3fr;
-  margin: 0;
+  margin: 2%;
   height: 100vh;
 }
 
 .nav-wrapper {
-  height: 50px;
+  height: 50%;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
 }
 
 .navbar-fixed {
   grid-row: 1/2;
   grid-column: 1/5;
-  height: 50px;
+  height: 100%;
 }
 
-#top-options {
+#gold {
   grid-row: 2/3;
-  grid-column: 2/4;
+  grid-column: 1/2;
 }
-
-#bottom-options {
+#silver {
+  grid-row: 2/3;
+  grid-column: 2/3;
+}
+#rsg{
+  grid-row: 2/3;
+  grid-column: 3/4;
+}
+#gunmetal {
+  grid-row: 2/3;
+  grid-column: 4/5;
+}
+#colorful {
   grid-row: 3/4;
-  grid-column: 1/5;
+  grid-column: 2/3;
+}
+#allprod {
+  grid-row: 3/4;
+  grid-column: 3/4;
 }
 
 #top-options, #bottom-options {
   display: flex;
   flex-direction: row;
-}
-
-ul {
-  padding: 0;
-  margin: 0;
+  grid-column: 1/5;
 }
 
 footer {
   grid-row: 4/5;
   grid-column: 1/5;
   background: url('/images/ksfooter.jpeg') fixed;
-  height: 70px;
+  height: 200%;
 }
 
 #middleColumn {
@@ -64,30 +75,32 @@ footer {
   grid-column: 3 / 4;
 }
 
-#gold, #silver, #rsg, #gunmetal, #colorful {
+#gold, #silver, #rsg, #gunmetal, #colorful, #allProducts {
   display: flex;
   flex-direction: row;
 }
 
 #gold, #silver, #gunmetal {
-  width: 300px;
+  width: 80%;
 }
 
-#rsg, #colorful {
-  width: 250px;
+#rsg, #colorful, #allProducts {
+  width: 30%;
 }
 
-button, a, #gold, #silver, #rsg, #gunmetal, #colorful, .navbar-fixed {
+#goldOption, #silverOption, #gunmetalOption, #rsgOption, #colorfulOption, #allprod {
+ font-size: 150%;
+}
+
+button, a, #gold, #silver, #rsg, #gunmetal, #colorful, #allProducts, .navbar-fixed {
   background: #F4E200;
 }
 
 button, a {
-  width: 100px;
-  /* margin: 20px 0 20px 0; */
+  width: 50%;
   border-radius: 10px;
-  width: 100%;
   text-decoration: underline;
-  font-size: 20px;
+  font-size: 100%;
   color: black;
   text-align: center;
 }
@@ -98,21 +111,21 @@ button:hover, a:hover, #login:hover, #logout:hover, #necklaces:hover, #earrings:
 }
 
 #ksBoxes {
-  height: 150px;
-  width: 130px;
+  height: 50%;
+  width: 70%;
 }
 
 h1 {
-  margin: 5px 0 0 0;
+  margin: auto;
   grid-column: 3/6;
   grid-row: 1/2;
   text-align: center;
-  font-size: 55px;
+  font-size: 350%;
 }
 
 p {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  margin: 5px 10px 5px 10px;
+  margin: auto;
   grid-column: 1/4;
   grid-row: 3/4;
 }
@@ -135,54 +148,34 @@ h1, h3, button, a {
   font-family: 'Euphoria Script', cursive;
 }
 
-#ders, #steph, #model {
-  height:150px;
-  width:180px;
+#ders, #steph, #model, #boxes {
+  height:75%;
+  width:75%;
 }
 
 #me, #meg {
-  height: 180px;
-  width: 120px;
+  height: 75%;
+  width: 75%;
 }
 
 #back {
   border: solid 3px white;
   grid-column: 1/2;
   float: left;
-  width: 60px;
+  width: 10%;
 } 
-
-#allprod{
-  border: solid 3px white;
-  grid-column: 4/5;
-  float: right;
-  width: 125px;
-}
 
 h3 {
   text-align: center;
 }
 
-#login, #logout, #necklaces, #bracelets, #earrings, #rings {
+#necklaces, #bracelets, #earrings, #rings {
   background: white;
-  width: 120px;
+  width: 15%;
   align-items: center;
 }
 
-#login, #logout {
-  font-size: 15px;
-}
-
-#top-options, #bottom-options {
- justify-content: center;
- /* margin: 30px; */
- width: 100vw;
-}
-
-#gold, #silver, #gunmetal, #rsg {
-  margin-right: 30px;
-}
-
-#necklaces, #bracelets, #earrings, #rings {
-  height: 30px;
+#login, #logout, #cart {
+  font-size: 70%;
+  width: 5%;
 }
