charge view/cart route  made

--- a/views/products/index.ejs
+++ b/views/products/index.ejs
@@ -16,12 +16,12 @@
           <a id='bracelets' href='/products/bracelets'> Bracelets </a><br>
           <a id='earrings' href='/products/earrings'> Earrings </a><br>
           <a id='rings' href='/products/rings'> Rings </a><br>
-          <a id='cart' href='/cart/index'> View Cart </a><br>
+          <a id='cart' href='/products/orders'> View Cart </a><br>
           <ul>
               <% if (ksUser) { %>
                 <a id='logout' href='/logout'> Log Out </a>
               <% } else { %>
-                <a id='login' href='/auth/google'>Login with Google</a>
+                <a id='login' href='/auth/google'> Login with Google </a>
               <% } %>
           </ul>
         </div> 
