--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>Kendra Products</title>
+    <script type="text/javascript" src="https://js.stripe.com/v1/"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body id='welcome-page'>
