--- a/views/products/show.ejs
+++ b/views/products/show.ejs
@@ -6,14 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel='stylesheet' href='/stylesheets/style.css' />
-  <title>Kendra Products</title>
+  <title>Product Detail</title>
   <script type="text/javascript" src="https://js.stripe.com/v1/"></script>
 </head>
 <body>
   <form action='/products/orders/charge' method='POST'>
-  <section id='show-all-page'>
     <input type='submit' value='Add To Cart'>
-  </section>
   </form>
 
   <!-- <form action="/your-server-side-code" method="POST">
