--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
   <head>
     <title>Kendra Products</title>
     <script type="text/javascript" src="https://js.stripe.com/v1/"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body id='welcome-page'>
@@ -12,12 +12,12 @@
     <img id='leftImg' src='images/leftImg.jpeg'>
 
     <div id='middleColumn'>
-      <a href='/contact' id='contactMe' type='submit'> Contact Me </a>
+      <a href='/contact' id='middle' value='Contact Me'> Contact Me </a>
       <img id='ksBoxes' src='images/ksBoxes.jpg'>
-      <a href='/products' value='viewProducts'> View Products </a>
+      <a href='/products' id='middle' value='View Products'> View Products </a>
     </div>
 
-    <p>Great prices on quality jewelry that has 
+    <p id='info'>Great prices on quality jewelry that has 
       been very lightly/never worn. Alot of these 
       pieces are no longer sold in-store or they 
       are custom pieces. Prices are 50%-70% off 
