--- a/views/products/index.ejs
+++ b/views/products/index.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <title>Kendra Products</title>
   </head>
@@ -12,17 +12,17 @@
     <div class='navbar-fixed'>
       <nav>
         <div class='nav-wrapper'>
-          <a id='necklaces' href='/products/necklaces'> Necklaces </a><br>
-          <a id='bracelets' href='/products/bracelets'> Bracelets </a><br>
-          <a id='earrings' href='/products/earrings'> Earrings </a><br>
-          <a id='rings' href='/products/rings'> Rings </a><br>
-          <a id='cart' href='/products/orders'> View Cart </a><br>
+          <a id='necklaces' href='/products/styles/necklaces'> Necklaces </a><br>
+          <a id='bracelets' href='/products/styles/bracelets'> Bracelets </a><br>
+          <a id='earrings' href='/products/styles/earrings'> Earrings </a><br>
+          <a id='rings' href='/products/styles/rings'> Rings </a><br>
           <ul>
-              <% if (ksUser) { %>
-                <a id='logout' href='/logout'> Log Out </a>
+            <a id='cart' href='/products/orders'> View Cart </a><br>
+            <% if (ksUser) { %>
+              <a id='logout' href='/logout'> Log Out </a>
               <% } else { %>
                 <a id='login' href='/auth/google'> Login with Google </a>
-              <% } %>
+                <% } %>
           </ul>
         </div> 
       </nav>
@@ -31,26 +31,26 @@
       <div id='top-options'>
         <div id='gold'>
           <img id='ders' src='images/dersGold.jpeg'>
-          <a id='goldOption' href='/products/gold'> Gold Options </a><br>
+          <a id='goldOption' href='/products/metals/gold'> Gold Options </a><br>
         </div>
         <div id='silver'>
           <img id='steph' src='images/stephSlv.jpeg'>
-          <a id='silverOption' href='/products/silver'> Silver Options </a><br>
+          <a id='silverOption' href='/products/metals/silver'> Silver Options </a><br>
         </div>
         <div id='gunmetal'>
           <img id='model' src='images/gunmetal.jpeg'>
-          <a id='gunmetalOption' href='/products/gunmetal'> Gunmetal Options </a><br>
+          <a id='gunmetalOption' href='/products/metals/gunmetal'> Gunmetal Options </a><br>
         </div>
       </div>
 
       <div id='bottom-options'>
         <div id='rsg'>
           <img id='meg' src='images/megRsg.jpeg'>
-          <a id='rsgOption' href='/products/rsg'> Rose Gold Options </a><br>
+          <a id='rsgOption' href='/products/metals/rosegold'> Rose Gold Options </a><br>
         </div>
         <div id='colorful'>
           <img id='me' src='images/colorful.png'>
-          <a id='colorfulOption' href='/products/colorful'> Colorful Options </a><br>
+          <a id='colorfulOption' href='/products/metals/colorful'> Colorful Options </a><br>
         </div>
         <div id='allProducts'>
           <img id='boxes' src='images/ksBoxes.jpg'>
@@ -58,7 +58,7 @@
         </div>
       </div>
 
-    <footer>
+    <footer id='footer-index'>
       <a id='back' href='/'> Back </a>
     </footer>
 
