--- a/views/products/index.ejs
+++ b/views/products/index.ejs
@@ -12,10 +12,10 @@
     <div class='navbar-fixed'>
       <nav>
         <div class='nav-wrapper'>
-          <a id='necklaces' href='/products/styles/necklaces'> Necklaces </a><br>
-          <a id='bracelets' href='/products/styles/bracelets'> Bracelets </a><br>
-          <a id='earrings' href='/products/styles/earrings'> Earrings </a><br>
-          <a id='rings' href='/products/styles/rings'> Rings </a><br>
+          <a id='necklaces' href='/products/necklaces'> Necklaces </a><br>
+          <a id='bracelets' href='/products/bracelets'> Bracelets </a><br>
+          <a id='earrings' href='/products/earrings'> Earrings </a><br>
+          <a id='rings' href='/products/rings'> Rings </a><br>
           <ul>
             <a id='cart' href='/products/orders'> View Cart </a><br>
             <% if (ksUser) { %>
@@ -39,7 +39,7 @@
         </div>
         <div id='gunmetal'>
           <img id='model' src='images/gunmetal.jpeg'>
-          <a id='gunmetalOption' href='/products/metals/gunmetal'> Gunmetal Options </a><br>
+          <a id='gunmetalOption' href='/gunmetal'> Gunmetal Options </a><br>
         </div>
       </div>
 
