--- a/views/products/show.ejs
+++ b/views/products/show.ejs
@@ -13,40 +13,40 @@
     <div id='nav' class='navbar-fixed'>
       <nav>
         <div class='nav-wrapper'>
-          <a id='opt' href='/products/metals/gold'> Gold </a>
-          <a id='opt' href='/products/metals/rosegold'> Rosegold </a>
-          <a id='opt' href='/products/metals/silver'> Silver </a>
-          <a id='opt' href='/products/metals/gunmetal'> Gunmetal </a>
-          <a id='opt' href='/products/metals/colorful'> Colorful </a>
+          <a id='opt' href='/products/gold'> Gold </a>
+          <a id='opt' href='/products/rosegold'> Rosegold </a>
+          <a id='opt' href='/products/silver'> Silver </a>
+          <a id='opt' href='/products/gunmetal'> Gunmetal </a>
+          <a id='opt' href='/products/colorful'> Colorful </a>
           <a id='cart' href='/products/orders'> View Cart </a>
         </div>
       </nav>
     </div>
     <div>
-      <img id='Img' src='/images/items/gunmetal/gnmt-alex.png'>
+      <img id='Img' src='/images/gunmetal/gnmt-alex.png'>
       <form action='/products/orders/new' method='POST'>
         <p id='detail'>Name: Alex<br>Style: Earrings<br>Metal: Gunmetal<br>Stone: Abalone<br>Customized<br>Price: $30</p>
         <input type='submit' value='Add To Cart'>
       </form>
     </div>
     <div>
-      <img id='Img' src='/images/items/gunmetal/gnmt-darrell.png'>
+      <img id='Img' src='/images/gunmetal/gnmt-darrell.png'>
       <form action='/products/orders/new' method='POST'>
-        <p id='detail'>Name: Darrell<br>Style: Necklace<br>Metal: Gunmetal<br>Stones: Abalone, Dichroic Glass, and Clear<br>Price: $55</p>
+        <p id='detail'>Name: Darrell<br>Style: Necklace<br>Metal: Gunmetal<br>Stones: Abalone, Dichroic Glass, and Clear<br>Customized<br>Price: $55</p>
         <input type='submit' value='Add To Cart'>
       </form>
     </div>
     <div>
-      <img id='Img' src='/images/items/gunmetal/gnmt-elora.png'>
+      <img id='Img' src='/images/gunmetal/gnmt-elora.png'>
       <form action='/products/orders/new' method='POST'>
-        <p id='detail'>Name: Elora<br>Style: Earrings<br>Metal: Gunmetal<br>Stone: Sky Blue Illusion<br>Price: $35</p>
+        <p id='detail'>Name: Elora<br>Style: Earrings<br>Metal: Gunmetal<br>Stone: Sky Blue Illusion<br>Customized<br>Price: $35</p>
         <input type='submit' value='Add To Cart'>
       </form>
     </div>
     <div>
-      <img id='Img' src='/images/items/gunmetal/ngnmt-malia.png'>
+      <img id='Img' src='/images/gunmetal/ngnmt-malia.png'>
       <form action='/products/orders/new' method='POST'>
-        <p id='detail'>Name: Malia<br>Style: Bracelet<br>Metal: Navy-Gunmetal<br>Price: $20</p>
+        <p id='detail'>Name: Malia<br>Style: Bracelet<br>Metal: Navy-Gunmetal<br>Season: Winter 2018<br>Discontinued<br>Price: $20</p>
         <input type='submit' value='Add To Cart'>
       </form>
     </div>
