add more products

--- a/views/products/rings.ejs
+++ b/views/products/rings.ejs
@@ -6,32 +6,31 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel='stylesheet' href='/stylesheets/style.css' />
-  <title>Gold Products</title>
+  <title>Necklace Products</title>
 </head>
-<body id='gold-page'>
+<body id='necklace-page'>
   <div id='nav' class='navbar-fixed'>
     <nav>
       <div class='nav-wrapper'>
-        <a id='opt' href='/products/gunmetal'> Gunmetal </a><br>
-        <a id='opt' href='/products/silver'> Silver </a><br>
-        <a id='opt' href='/products/rsg'> Rose Gold </a><br>
-        <a id='opt' href='/products/colorful'> Colorful </a><br>
-        <a id='opt' href='/products/show'> All Products </a><br>
-        <a id='cart' href='/products/orders'> View Cart </a><br>
+        <a id='opt' href='/products/necklaces'> Necklaces </a><br>
+          <a id='opt' href='/products/bracelets'> Bracelets </a><br>
+          <a id='opt' href='/products/earrings'> Earrings </a><br>
+          <a id='opt' href='/products/show'> All Products </a>
+          <a id='cart' href='/products/orders'> View Cart </a>
       </div>
     </nav>
-  </div>
-  <div>
-    <img id='Img' src='/images/gold/gld-brett.png'>
-    <form action='/products/orders/new' method='POST'>
-      <p id='detail'>Name: Brett<br>Style: Necklace<br>Metal: Gold<br>Season: Winter 2017<br>Discontinued<br>Price: $20</p>
-      <input type='submit' value='Add To Cart'>
-    </form>   
   </div>
   <div>
     <img id='Img' src='/images/gold/gld-reagan.png'>
     <form action='/products/orders/new' method='POST'>
       <p id='detail'>Name: Reagan<br>Style: Ring<br>Metal: Gold<br>Season: Fall 2018<br>Price: $20</p>
+      <input type='submit' value='Add To Cart'>
+    </form>
+  </div>
+  <div>
+    <img id='Img' src='/images/rsg/rsg-pryde.png'>
+    <form action='/products/orders/new' method='POST'>
+      <p id='detail'>Name: Pryde<br>Style: Ring<br>Metal: Rose Gold<br>Season: Winter 2018<br>Price: $15</p>
       <input type='submit' value='Add To Cart'>
     </form>
   </div>
