--- a/views/products/silver.ejs
+++ b/views/products/silver.ejs
@@ -22,7 +22,11 @@
     </nav>
   </div>
   <div>
-    
+    <form action='/products/orders/new' method='POST'>
+    <img id='Img' src='/images/silver/rhod-ember.png'>
+      <p id='detail'>Name: Ember<br>Style: Necklace<br>Metal: Silver<br>Season: Fall 2018<br>Discontinued<br>Price: $15</p>
+      <input type='submit' value='Add To Cart'>
+    </form>
   </div>
   <footer id='footer-show'>
     <a id='back' href='/products'> Back </a>
