--- a/views/products/rsg.ejs
+++ b/views/products/rsg.ejs
@@ -22,7 +22,25 @@
     </nav>
   </div>
   <div>
-    
+    <img id='Img' src='/images/rsg/rsg-allie.png'>
+    <form action='/products/orders/new' method='POST'>
+      <p id='detail'>Name: Allie<br>Style: Earrings<br>Metal: Rose Gold<br>Stone: Ivory Mother of Pearl<br>Customized<br>Price: $50</p>
+      <input type='submit' value='Add To Cart'>
+    </form>
+  </div>
+  <div>
+    <img id='Img' src='/images/rsg/rsg-joel.png'>
+    <form action='/products/orders/new' method='POST'>
+      <p id='detail'>Name: Joel<br>Style: Ring<br>Metal: Rose Gold<br>Season: Winter 2018<br>Price: $5</p>
+      <input type='submit' value='Add To Cart'>
+    </form>
+  </div>
+  <div>
+    <img id='Img' src='/images/rsg/rsg-pryde.png'>
+    <form action='/products/orders/new' method='POST'>
+      <p id='detail'>Name: Pryde<br>Style: Ring<br>Metal: Rose Gold<br>Season: Winter 2018<br>Price: $15</p>
+      <input type='submit' value='Add To Cart'>
+    </form>
   </div>
   <footer id='footer-show'>
     <a id='back' href='/products'> Back </a>
