add to cart button works

--- a/views/products/orders/new.ejs
+++ b/views/products/orders/new.ejs
@@ -8,6 +8,10 @@
   <title>Document</title>
 </head>
 <body>
-  <h1> HELLO </h1>
+  <h1> <%= user.name %> </h1>
+  <% user.cart.forEach(function(item) { %>
+    <%- item.item %>
+    <%= item.price %>
+  <% }) %>
 </body>
 </html>
