Fix Add To Cart for gunmetal/all pages

--- a/views/products/gunmetal.ejs
+++ b/views/products/gunmetal.ejs
@@ -23,29 +23,37 @@
   </div>
   <div>
     <img id='Img' src='/images/gunmetal/gnmt-alex.png'>
-    <form action='/products/orders/new' method='POST'>
-      <p id='detail'>Name: Alex<br>Style: Earrings<br>Metal: Gunmetal<br>Stone: Abalone<br>Customized<br>Price: $30</p>
+    <form action='/products/addToCart' method='POST'>
+      <input type='hidden' name="item" value='Alex Earrings in Gunmetal'>
+        <input type='hidden' name="price" value='$30'>
+      <p id='detail'>Name: Alex<br>Style: Earrings<br>Metal: Gunmetal<br>Stone: Abalone<br>Price: $30</p>
       <input type='submit' value='Add To Cart'>
     </form>
   </div>
   <div>
     <img id='Img' src='/images/gunmetal/gnmt-darrell.png'>
-    <form action='/products/orders/new' method='POST'>
-      <p id='detail'>Name: Darrell<br>Style: Necklace<br>Metal: Gunmetal<br>Stones: Abalone, Dichroic Glass, and Clear<br>Customized<br>Price: $55</p>
+    <form action='/products/addToCart' method='POST'>
+      <input type='hidden' name="item" value='Darrell Necklace in Gunmetal'>
+      <input type='hidden' name="price" value='$55'>
+      <p id='detail'>Name: Darrell<br>Style: Necklace<br>Metal: Gunmetal<br>Stones: Abalone, Dichroic Glass, and Clear<br>Price: $55</p>
       <input type='submit' value='Add To Cart'>
     </form>
   </div>
   <div>
     <img id='Img' src='/images/gunmetal/gnmt-elora.png'>
-    <form action='/products/orders/new' method='POST'>
-      <p id='detail'>Name: Elora<br>Style: Earrings<br>Metal: Gunmetal<br>Stone: Sky Blue Illusion<br>Customized<br>Price: $35</p>
+    <form action='/products/addToCart' method='POST'>
+      <input type='hidden' name="item" value='Elora Earrings in Gunmetal'>
+      <input type='hidden' name="price" value='$35'>
+      <p id='detail'>Name: Elora<br>Style: Earrings<br>Metal: Gunmetal<br>Stone: Sky Blue Illusion<br>Price: $35</p>
       <input type='submit' value='Add To Cart'>
     </form>
   </div>
   <div>
     <img id='Img' src='/images/gunmetal/ngnmt-malia.png'>
-    <form action='/products/orders/new' method='POST'>
-      <p id='detail'>Name: Malia<br>Style: Bracelet<br>Metal: Navy-Gunmetal<br>Season: Winter 2018<br>Discontinued<br>Price: $20</p>
+    <form action='/products/addToCart' method='POST'>
+      <input type='hidden' name="item" value='Malia Bracelet Set in Navy-Gunmetal'>
+      <input type='hidden' name="price" value='$20'>
+      <p id='detail'>Name: Malia<br>Style: Bracelet<br>Metal: Navy-Gunmetal<br>Season: Winter 2018<br>Price: $20</p>
       <input type='submit' value='Add To Cart'>
     </form>
   </div>
