--- a/views/products/show.ejs
+++ b/views/products/show.ejs
@@ -25,72 +25,90 @@
     <div>
       <img id='Img' src='/images/gunmetal/gnmt-alex.png'>
       <form action='/products/addToCart' method='POST'>
-        <input type='hidden' name="item" value='Alex<br>Style: Earrings<br>Metal: Gunmetal'>
-        <input type='hidden' name="price" value='30'>
-        <p id='detail'>Name: Alex<br>Style: Earrings<br>Metal: Gunmetal<br>Stone: Abalone<br>Customized<br>Price: $30</p>
+        <input type='hidden' name="item" value='Alex Earrings in Gunmetal'>
+        <input type='hidden' name="price" value='$30'>
+        <p id='detail'>Name: Alex<br>Style: Earrings<br>Metal: Gunmetal<br>Stone: Abalone<br>Price: $30</p>
         <input type='submit' value='Add To Cart'>
       </form>
     </div>
     <div>
       <img id='Img' src='/images/gunmetal/gnmt-darrell.png'>
-      <form action='/products/orders/new' method='POST'>
-        <p id='detail'>Name: Darrell<br>Style: Necklace<br>Metal: Gunmetal<br>Stones: Abalone, Dichroic Glass, and Clear<br>Customized<br>Price: $55</p>
+      <form action='/products/addToCart' method='POST'>
+        <input type='hidden' name="item" value='Darrell Necklace in Gunmetal'>
+        <input type='hidden' name="price" value='$55'>
+        <p id='detail'>Name: Darrell<br>Style: Necklace<br>Metal: Gunmetal<br>Stones: Abalone, Dichroic Glass, and Clear<br>Price: $55</p>
         <input type='submit' value='Add To Cart'>
       </form>
     </div>
     <div>
       <img id='Img' src='/images/gunmetal/gnmt-elora.png'>
-      <form action='/products/orders/new' method='POST'>
-        <p id='detail'>Name: Elora<br>Style: Earrings<br>Metal: Gunmetal<br>Stone: Sky Blue Illusion<br>Customized<br>Price: $35</p>
+      <form action='/products/addToCart' method='POST'>
+        <input type='hidden' name="item" value='Elora Earrings in Gunmetal'>
+        <input type='hidden' name="price" value='$35'>
+        <p id='detail'>Name: Elora<br>Style: Earrings<br>Metal: Gunmetal<br>Stone: Sky Blue Illusion<br>Price: $35</p>
         <input type='submit' value='Add To Cart'>
       </form>
     </div>
     <div>
       <img id='Img' src='/images/gunmetal/ngnmt-malia.png'>
-      <form action='/products/orders/new' method='POST'>
-        <p id='detail'>Name: Malia<br>Style: Bracelet<br>Metal: Navy-Gunmetal<br>Season: Winter 2018<br>Discontinued<br>Price: $20</p>
+      <form action='/products/addToCart' method='POST'>
+        <input type='hidden' name="item" value='Malia Bracelet Set in Navy-Gunmetal'>
+        <input type='hidden' name="price" value='$20'>
+        <p id='detail'>Name: Malia<br>Style: Bracelet<br>Metal: Navy-Gunmetal<br>Season: Winter 2018<br>Price: $20</p>
         <input type='submit' value='Add To Cart'>
       </form>
     </div>
     <div>
       <img id='Img' src='/images/gold/gld-brett.png'>
-      <form action='/products/orders/new' method='POST'>
-        <p id='detail'>Name: Brett<br>Style: Necklace<br>Metal: Gold<br>Season: Winter 2017<br>Discontinued<br>Price: $20</p>
+      <form action='/products/addToCart' method='POST'>
+        <input type='hidden' name="item" value='Brett Necklace in Gold'>
+        <input type='hidden' name="price" value='$20'>
+        <p id='detail'>Name: Brett<br>Style: Necklace<br>Metal: Gold<br>Season: Winter 2017<br>Price: $20</p>
         <input type='submit' value='Add To Cart'>
       </form>   
     </div>
     <div>
       <img id='Img' src='/images/gold/gld-reagan.png'>
-      <form action='/products/orders/new' method='POST'>
+      <form action='/products/addToCart' method='POST'>
+        <input type='hidden' name="item" value='Reagan Ring in Gold'>
+        <input type='hidden' name="price" value='$20'>
         <p id='detail'>Name: Reagan<br>Style: Ring<br>Metal: Gold<br>Season: Fall 2018<br>Price: $20</p>
         <input type='submit' value='Add To Cart'>
       </form>
     </div>
     <div>
-      <form action='/products/orders/new' method='POST'>
       <img id='Img' src='/images/silver/rhod-ember.png'>
-        <p id='detail'>Name: Ember<br>Style: Necklace<br>Metal: Silver<br>Season: Fall 2018<br>Discontinued<br>Price: $15</p>
+      <form action='/products/addToCart' method='POST'>
+        <input type='hidden' name="item" value='Ember Necklace in Silver'>
+        <input type='hidden' name="price" value='$15'>
+        <p id='detail'>Name: Ember<br>Style: Necklace<br>Metal: Silver<br>Season: Fall 2018<br>Price: $15</p>
         <input type='submit' value='Add To Cart'>
       </form>
     </div>
     <div>
       <img id='Img' src='/images/rsg/rsg-allie.png'>
-      <form action='/products/orders/new' method='POST'>
-        <p id='detail'>Name: Allie<br>Style: Earrings<br>Metal: Rose Gold<br>Stone: Ivory Mother of Pearl<br>Customized<br>Price: $50</p>
+      <form action='/products/addToCart' method='POST'>
+        <input type='hidden' name="item" value='Allie Earrings in Rose Gold'>
+        <input type='hidden' name="price" value='$50'>
+        <p id='detail'>Name: Allie<br>Style: Earrings<br>Metal: Rose Gold<br>Stone: Ivory Mother of Pearl<br>Price: $50</p>
         <input type='submit' value='Add To Cart'>
       </form>
     </div>
     <div>
       <img id='Img' src='/images/rsg/rsg-joel.png'>
-      <form action='/products/orders/new' method='POST'>
-        <p id='detail'>Name: Joel<br>Style: Ring<br>Metal: Rose Gold<br>Season: Winter 2018<br>Discontinued<br>Price: $5</p>
+      <form action='/products/addToCart' method='POST'>
+        <input type='hidden' name="item" value='Joel Ring in Rose Gold'>
+        <input type='hidden' name="price" value='$5'>
+        <p id='detail'>Name: Joel<br>Style: Ring<br>Metal: Rose Gold<br>Season: Winter 2018<br>Price: $5</p>
         <input type='submit' value='Add To Cart'>
       </form>
     </div>
     <div>
       <img id='Img' src='/images/rsg/rsg-pryde.png'>
-      <form action='/products/orders/new' method='POST'>
-        <p id='detail'>Name: Pryde<br>Style: Ring<br>Metal: Rose Gold<br>Season: Winter 2018<br>Discontinued<br>Price: $15</p>
+      <form action='/products/addToCart' method='POST'>
+        <input type='hidden' name="item" value='Pryde Ring in Rose Gold'>
+        <input type='hidden' name="price" value='$15'>
+        <p id='detail'>Name: Pryde<br>Style: Ring<br>Metal: Rose Gold<br>Season: Winter 2018<br>Price: $15</p>
         <input type='submit' value='Add To Cart'>
       </form>
     </div>
